# rover

./: 404.html  Cargo.toml  index.html  print.html  searchindex.js  searchindex.json
contributing/: documentation.html  index.html  prerequisites.html  project-structure.html
crates/rover-client/: Cargo.toml  federation-schema.graphql
crates/rover-client/src/: error.rs
crates/rover-client/src/query/partial/: introspect.graphql  introspect.rs  mod.rs
crates/rover-client/src/query/schema/: check.graphql  check.rs  introspect.rs  mod.rs
installers/roverup/: Cargo.toml  install.sh
installers/roverup/src/: error.rs  lib.rs
src/: client.rs
src/command/partial/: introspect.rs  mod.rs
src/command/schema/: check.rs  introspect.rs  mod.rs
usage/: index.html
usage/config/: authentication.html  environment-variables.html  index.html  profiles.html
